# codecontext

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/codecontext/: cli.py  scanner.py
src/ctxcode/: git_utils.py  scanner.py
