[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codecontext"
version = "0.1.0"
description = "Extract your codebase context for AI assistants"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mohammed Hanan", email = "hananmtp313@gmail.com"},
]
keywords = ["cli", "ai", "code-review", "productivity", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/hanu-14/codecontext"
Repository = "https://github.com/hanu-14/codecontext"
Issues = "https://github.com/hanu-14/codecontext/issues"

[project.scripts]
codecontext = "codecontext.cli:main"
ctx = "codecontext.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codecontext"]

[tool.hatch.build.targets.sdist]
include = ["/src"]
