[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctxcode"
version = "0.2.3"
description = "Extract your codebase context for AI assistants"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mohammed Hanan", email = "hananmtp313@gmail.com"},
]
keywords = ["cli", "ai", "code-review", "productivity", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/hanu-14/codecontext"
Repository = "https://github.com/hanu-14/codecontext"
Issues = "https://github.com/hanu-14/codecontext/issues"

[project.scripts]
codecontext = "ctxcode.cli:main"
ctx = "ctxcode.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ctxcode"]

[tool.hatch.build.targets.sdist]
include = ["/src"]
